--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rollup": "^3.15.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^4.3.0",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.2",
     "svelte": "^3.55.0"
@@ -23,8 +24,9 @@
   "dependencies": {
     "cache": "^3.0.0",
     "dotenv": "^16.3.1",
-    "firebase": "^10.7.1",
-    "rxfire": "^6.0.5",
+    "firebase": "^8.7.0",
+    "package": "^1.0.1",
+    "rxfire": "^4.0.0",
     "rxjs": "^7.8.1",
     "sirv-cli": "^2.0.0"
   }
